# pyasmjit

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  binder.config  build.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: all_includes.hpp  core.cpp  main.cpp  x86.cpp
src/pyasmjit/: __init__.py  error.py
src/pyasmjit/core/: __init__.py
src/pyasmjit/x86/: __init__.py  registers.py
tests/: test_core.py  test_version.py  test_x86_assembler.py
