[project]
name = "pyasmjit"
version = "0.1.0"
description = "Python bindings to asmjit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[project.optional-dependencies]
dev = [
    "pybind11>=2.13.5",
    "ruff>=0.6.2",
    "cibuildwheel>=2.20.0",
    "scikit-build-core>=0.10.5",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.uv]
dev-dependencies = [
    "cibuildwheel>=2.20.0",
    "scikit-build-core>=0.10.5",
]
